# pypsa-gsa

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: api.yaml  config.yaml  master.csv  parameters.csv  plots_ua.csv  results.csv  results_gsa.csv  results_ua.csv  rps.csv  solving.yaml
config/constraints/: co2L.csv  itl.csv  rps.csv
config/extra/: master.csv  results.csv  results_gsa.csv  results_ua.csv
config/pypsa-usa/: domestic_exports.csv  domestic_imports.csv  international_exports.csv  international_imports.csv  pop_layout_elec_s33_c4m.csv
dashboard/: README.md  app.py  claude.py  clean_data.py  cleanup_backend.py  collect_data.py  requirements.txt  utils.py
dashboard/assets/: loading_cursor.js
dashboard/components/: cr.py  data.py  gsa.py  ids.py  input_data.py  sa_tab.py  shared.py  styles.py  ua.py  ua_system.py  utils.py
dashboard/data/: iso.geojson  ua_sectors.json
hpc/: .bashrc  load_env.sh  requirements.txt
paper/: aeo.ipynb  eia.py
resources/emissions/: co2_2005.csv  co2_2005_50pct.csv
resources/interchanges/: regions.csv  state_interchange_data.csv
resources/natural_gas/: domestic.csv  international.csv
resources/policy/: co2_limits.csv  ev_policy.csv  technology_limits.csv
resources/reeds/: ces_fraction.csv  rps_fraction.csv
workflow/: Snakefile  Snakefile.generate
workflow/envs/: env.yaml  pypsa-gsa.yaml  sample.yaml
workflow/notebooks/: emissions.csv  usa-emissions.ipynb
workflow/profiles/: cluster.yaml
workflow/rules/: constraints.smk  generate.smk  (+7 more)
(+49 files in other folders)
