[project]
name = "pypsa-gsa"
version = "0.1.0"
description = "Global Scenario Analysis Workflow for PyPSA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.4",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "graphviz>=0.20.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pypsa==0.30.2",
    "pyyaml>=6.0.2",
    "salib>=1.5.1",
    "seaborn>=0.13.2",
    "snakemake==8.20.5",
]
